# flutter_toolkit

./: .gitignore  README-EN.md  README.md  pubspec.yaml
Niterm/android/: CMakeLists.txt  CmakeLists.txt  build_android
Niterm/android/cmd/: android.sh
Niterm/src/: CmakeLists.txt  term.c  term.h
android/: build.gradle
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml  decoder.c  stream.c  stream.h  video_buffer.c  video_buffer.h
android/app/src/main/assets/Nightmare/: Backup  MTOOLKIT  unzip.sh
android/app/src/main/cpp/: CMakeLists.txt  SocketConnection.cpp  SocketConnection.h  native-lib.cpp  native-lib.h
android/app/src/main/java/android/util_new/: AttributeSet.java
android/app/src/main/java/com/m/Tools/: AppInfo.java  FileUtils.java  Resource.java  WriteTxt.java
android/app/src/main/java/com/nightmare/: FileManager.java  MainActivity.java  MyApplication.java
android/app/src/main/java/ffmpeg/: FFmpegNativeUtil.java  MyVideoView.java
android/app/src/main/kotlin/com/nightmare_tool/: MainActivity.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: filepaths.xml  shortcuts.xml
android/app/src/main/util/: buffer_util.h  cbuf.h  net.c  net.h  str_util.h
android/gradle/wrapper/: gradle-wrapper.properties
ffmpeg/android/: CMakeLists.txt  build_android
ffmpeg/src/: CMakeLists.txt  native-lib.cpp  native-lib.h
lib/: main.dart
lib/common/: change_log.dart  constant.dart  envirpath.dart  serivce_url.dart  toolkit_colors.dart
lib/model/: toolkit_info.dart
lib/module/: about.dart  assets_install_page.dart  donate.dart  magisk.dart  permission_check.dart
lib/module/drawer/: drawer.dart  drawer_item.dart  drawer_list.dart  drawer_logo.dart  drawer_widget.dart  header_animation.dart  open_source.dart
lib/module/file_manager/: Image.dart  file_manager.dart  fm_drawer.dart  fm_function.dart  global_widget.dart  page_choose.dart
lib/module/file_manager/dialog/: add_filenode.dart  apk_tool_decode.dart  apktool_encode.dart  file_copy.dart  long_press.dart
lib/module/file_manager/io/: directory.dart  file.dart  file_entity.dart
lib/module/file_manager/model/: file_node.dart  file_type.dart
lib/module/file_manager/page/: center_drawer.dart  fm_page.dart  text_edit.dart  video.dart  video_play.dart
lib/module/file_manager/provider/: file_manager_notifier.dart
lib/module/file_manager/utils/: bookmarks.dart  creat_work_dir.dart
lib/module/file_manager/widgets/: file_cliprrect.dart  item_imgheader.dart
lib/module/term/: term.dart  term_func.dart
lib/module/term/common/: constant.dart
lib/module/term/model/: term.dart
lib/module/term/utils/: custom_utf.dart
lib/page/: ni_term.dart
lib/provider/: change_notifier.dart  night_ssh_notifier.dart
lib/router/: ripple_router.dart
lib/utils/: apktool_func.dart  assets_func.dart  client.dart  custom_log.dart  database.dart  get_file_size.dart  get_lib_path.dart  global_function.dart  info.dart  init_app.dart  native.dart  platform_channel.dart  platform_util.dart  process.dart  root_check.dart  show_toast.dart  test.dart
lib/widgets/: custom_dialog.dart  material_cliprrect.dart  my_canvas.dart  public_widgets.dart  rotated_view.dart
lib/widgets/anvil_effect/: explosion_effect_widget.dart
test/: widget_test.dart
